src/test/ui/reachable/expr_loop.stderr
error: unreachable statement
  --> $DIR/expr_loop.rs:8:5
   |
LL |     println!("I am dead.");
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_loop.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: unreachable statement
  --> $DIR/expr_loop.rs:21:5
   |
LL |     println!("I am dead.");
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: unreachable statement
  --> $DIR/expr_loop.rs:32:5
   |
LL |     println!("I am dead.");
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to 3 previous errors

